objects/project_cloud__Project_Phase__c.object
<CustomObject>
    <description>Phases that exist within a project, each phase consists of a series of project tasks grouping them together.</description>
    <fields>
        <fullName>ccpe_r__Cost__c</fullName>
        <label>Calculated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Rate__c</fullName>
        <label>Calculated Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Utilization_Category__c</fullName>
        <label>Utilization Category</label>
        <picklist>
            <picklistValues>
                <fullName>Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Autonomous_End__c</fullName>
        <description>User entered value indicating the desired end date of the Sprint. This value of this date is not used when calculating the Project End Date</description>
        <inlineHelpText>The end date desired for the Project Phase. (NOTE this value will ignored if the phase has any Project Tasks)</inlineHelpText>
        <label>Sprint End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Autonomous_Start__c</fullName>
        <description>User entered value indicating the desired start date of the Sprint. This value of this date is not used when calculating the Project Start Date</description>
        <inlineHelpText>The start date desired for the Project Phase. (NOTE this value will ignored if the phase has any Project Tasks)</inlineHelpText>
        <label>Sprint Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Completed_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completion (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Duration__c</fullName>
        <label>Duration (days)</label>
        <summarizedField>project_cloud__Project_Task__c.project_cloud__Duration__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Task__c.project_cloud__Project_Phase__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__End__c</fullName>
        <description>Rollup summary of the latest end date of the all the Project Tasks in this Project Phase</description>
        <inlineHelpText>The calculated end date of the project phase based on the end date of the last project task within the project phase</inlineHelpText>
        <label>End (Rollup)</label>
        <summarizedField>project_cloud__Project_Task__c.project_cloud__End__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Task__c.project_cloud__Project_Phase__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <summarizedField>project_cloud__Project_Task__c.project_cloud__Estimated_Hours__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Task__c.project_cloud__Project_Phase__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Final_End__c</fullName>
        <formula>IF(ISBLANK(project_cloud__End__c), project_cloud__Autonomous_End__c, project_cloud__End__c)</formula>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Final_Start__c</fullName>
        <formula>IF(ISBLANK(project_cloud__Start__c), project_cloud__Autonomous_Start__c, project_cloud__Start__c)</formula>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <description>M/D relationship determining which Project that this Project Phase belongs to</description>
        <inlineHelpText>The project that this project phase belongs to</inlineHelpText>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Project Phases</relationshipLabel>
        <relationshipName>Project_Phases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Sorting_Hash__c</fullName>
        <description>This field is used for sorting Project Phases in the CCProjex Enterprise default order of Start, End, Name</description>
        <formula>/*When the sort alphabetically flag is set, the sorting hash should not include the date*/
IF($Setup.project_cloud__Configuration_Options__c.project_cloud__Sort_Projects_Alphabetically__c,
	&apos;&apos;,
/*ELSE*/
	BLANKVALUE(TEXT(project_cloud__Final_Start__c), &apos;9999-99-99&apos;) &amp; BLANKVALUE(TEXT(project_cloud__Final_End__c), &apos;9999-99-99&apos;)
) &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can be used to sort Project Phases using the CCProjex Enterprise default order</inlineHelpText>
        <label>Sorting Column</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Start__c</fullName>
        <description>Rollup summary of the earliest start date of the all the Project Tasks in this Project Phase</description>
        <inlineHelpText>The calculated start date of the project phase based on the start date of the earliest project task within the project phase</inlineHelpText>
        <label>Start (Rollup)</label>
        <summarizedField>project_cloud__Project_Task__c.project_cloud__Start__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Task__c.project_cloud__Project_Phase__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Status_Enum__c</fullName>
        <description>This is a hidden field used by the Project rollup summary to determine the status of all the phases in the Project. This is a system field and must not be visible.</description>
        <formula>IF(project_cloud__Task_Status_Minimum__c = project_cloud__Task_Status_Maximum__c &amp;&amp; project_cloud__Task_Status_Minimum__c = 0,
	0,
	IF(project_cloud__Task_Status_Minimum__c = project_cloud__Task_Status_Maximum__c &amp;&amp; project_cloud__Task_Status_Minimum__c &gt; 1,
		2,
		1
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a system field and must not be visible.</inlineHelpText>
        <label>Status Enum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Status__c</fullName>
        <description>Using the minimum and maximum rollup status values determine the overall status of the Project Phase</description>
        <formula>IF(project_cloud__Task_Status_Minimum__c = project_cloud__Task_Status_Maximum__c &amp;&amp; project_cloud__Task_Status_Minimum__c = 0,
	$Label.project_cloud__Project_Status_Completed
	,
	IF(project_cloud__Task_Status_Minimum__c = project_cloud__Task_Status_Maximum__c &amp;&amp; project_cloud__Task_Status_Minimum__c &gt; 1,
		$Label.project_cloud__Project_Status_Not_Started
		,
		$Label.project_cloud__Project_Status_In_Progress
	)
)</formula>
        <inlineHelpText>The status of the project phase derived from the status of the project tasks within the phase. &apos;Not Started&apos; if no task has commenced, &apos;In Progress&apos; if one of more tasks have commenced and are still in progress, or &apos;Completed&apos; if all tasks are completed</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Subscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this indicates the Project Phase has been fully subscribed. i.e there are no more subscriptions that need to be created</description>
        <inlineHelpText>When checked, this indicates that the Project Phase this task belongs to has been marked fully subscribed. (This is only applicable if allocating at the phase level)</inlineHelpText>
        <label>Fully Subscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Task_Status_Maximum__c</fullName>
        <description>System calculated field used to derive the project phase status. This is a system field and does not be visible. The status field is what should be used.</description>
        <inlineHelpText>This is a system field and does not be visible. The status field is what should be used.</inlineHelpText>
        <label>Task Status Maximum</label>
        <summarizedField>project_cloud__Project_Task__c.project_cloud__Status_Enum__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Task__c.project_cloud__Project_Phase__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Task_Status_Minimum__c</fullName>
        <description>System calculated field used to derive the project phase status. This is a system field and does not be visible. The status field is what should be used.</description>
        <inlineHelpText>This is a system field and does not be visible. The status field is what should be used.</inlineHelpText>
        <label>Task Status Miniumum</label>
        <summarizedField>project_cloud__Project_Task__c.project_cloud__Status_Enum__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Task__c.project_cloud__Project_Phase__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Worked_Hours__c</fullName>
        <description>Sum of the hours completed on the Phase it&apos;s Tasks and Tickets using the time entry Work objects. This is calculated by the trigger WorkConfiguration</description>
        <inlineHelpText>This is a system object and should not be visible</inlineHelpText>
        <label>Entered Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Project Phase</label>
    <listViews>
        <fullName>project_cloud__All_Project_Phases</fullName>
        <columns>NAME</columns>
        <columns>project_cloud__Project__c</columns>
        <columns>project_cloud__Status__c</columns>
        <columns>project_cloud__Start__c</columns>
        <columns>project_cloud__End__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>